--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.6",
     "@next/mdx": "^9.4.4",
+    "@reach/tabs": "^0.10.5",
     "next": "9.4.4",
     "pure-react-carousel": "^1.27.1",
     "react": "16.13.1",
