--- a/website/package.json
+++ b/website/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.6",
     "@next/mdx": "^9.4.4",
+    "@reach/disclosure": "^0.10.5",
     "@reach/tabs": "^0.10.5",
     "beautiful-react-hooks": "^0.27.1",
     "next": "9.4.4",
