--- a/website/package.json
+++ b/website/package.json
@@ -13,7 +13,9 @@
     "@reach/accordion": "^0.10.5",
     "@reach/disclosure": "^0.10.5",
     "@reach/tabs": "^0.10.5",
+    "@sendgrid/mail": "^7.2.1",
     "beautiful-react-hooks": "^0.27.1",
+    "dotenv": "^8.2.0",
     "next": "9.4.4",
     "pure-react-carousel": "^1.27.1",
     "react": "16.13.1",
