footer lay-out and homepage tweaks

--- a/website/package.json
+++ b/website/package.json
@@ -21,7 +21,8 @@
     "next": "9.4.4",
     "pure-react-carousel": "^1.27.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "postcss-preset-env": "^6.7.0",
