--- a/website/package.json
+++ b/website/package.json
@@ -22,6 +22,7 @@
     "pure-react-carousel": "^1.27.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-ga": "^3.1.2",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
