--- a/website/package.json
+++ b/website/package.json
@@ -21,7 +21,11 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "formik": "^2.2.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
     "next": "9.4.4",
+    "next-compose-plugins": "^2.2.0",
+    "next-optimized-images": "^2.6.2",
     "pure-react-carousel": "^1.27.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
