--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reach/tabs": "^0.10.5",
     "@sendgrid/mail": "^7.2.6",
     "aws-sdk": "^2.768.0",
+    "axios": "^0.27.2",
     "beautiful-react-hooks": "^0.27.4",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
